<resources>
    <string name="app_name">Clend App</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_logout">Log Out</string>
    <string name="menu_notes">Notes</string>
    <string name="menu_calculator">Calculator</string>
    <string name="menu_unknown">\?\?\?</string>
    <string name="menu_ranking">Rankings</string>
    <string name="menu_premium">Premium</string>
    <string name="menu_support">Customer Support</string>

    <string name="profile_name">Name Surname</string>
    <string name="profile_rank">Rank</string>
    <string name="profile_username">\@Username</string>

    <string name="empty_tasks_day">No tasks for this day</string>
    <string name="mark_as_done">Mark as done</string>
    <string name="mark_as_pending">Mark as pending</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="no_tasks_recorded">No tasks recorded.</string>
    <string name="enter_first_tasks">Enter your first tasks!</string>
</resources>